# naver-land-mcp

./: .gitignore  config.py  naver_land.py  pyproject.toml  redevelopment.py
.github/workflows/: daily_report.yml
scripts/: daily_report.py  test_integration.py  trigger_workflow.py
tests/: test_pipeline.py
